<resources>
    <string name="app_name">Mtahini</string>
    <string name="Welcome">Welcome to</string>
    <string name="intro_msg">A place to register for units and  tests and scores…</string>
    <string name="startMsg">Let\'s get started…</string>
    <string name="student">Continue as a student</string>
    <string name="lecturer">Continue as Lecturer</string>
    <string name="have_account">Already have an account</string>
    <string name="login"><u>Login</u></string>
    <string name="login_no_line">Login</string>
    <string name="back_arrow">Back arrow</string>
    <string name="loginNoLine">Login</string>
    <string name="loginMsg">Login to start your experience with the app!</string>
    <string name="email">Email</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="your_password">Your password</string>
    <string name="enter_password">Enter password</string>
    <string name="forgot"><u>Forgot Password</u></string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="register"><u>Register</u></string>
    <string name="registerMsg">Create an account to access all features of <b>Mtahini!</b></string>
    <string name="student_email">Student email</string>
    <string name="student_name">Student name</string>
    <string name="name">Name</string>
    <string name="enter_name">Enter name</string>
    <string name="password">Password</string>
    <string name="Confirm_password">Confirm Password</string>
    <string name="registerNoLine">Register</string>
    <string name="lec_no_account">Not yet registered?</string>
    <string name="lectureLognoLine">Lecture Login</string>
    <string name="re_enter_password">Repeat Password</string>
    <string name="home_msg">Hello, you\'re seeing this message because you have successfully logged in to the app.</string>
    <string name="generate_report">Generate Reports</string>
    <string name="student_marks">View and edit student marks</string>
    <string name="summary">Generate Summary</string>
    <string name="student_accounts">View student accounts</string>
    <string name="enter_Reg">Enter Registration Number</string>
    <string name="reg_number">Registration number</string>
    <string name="dummy_email">doe.john21@students.dkut.ac.ke</string>
    <string name="dummy_registration">C026–01–1234/2021</string>
    <string name="dummy_course">Bsc Computer Science</string>
    <string name="dummy_number">10</string>
    <string name="units">Units Registered</string>
    <string name="dummy_cardview_course">CCS 3211: Mobile Application Programming</string>
    <string name="dummy_teacher_name">Mr Opondo</string>
    <string name="dummy_student_name">Student Name</string>
    <string name="register_new_course">New Course</string>
    <string name="registered_courses">Registered Courses</string>
    <string name="mobile_application_programming">Mobile Application Programming</string>
    <string name="save">save</string>
    <string name="compiler_construction">Compiler Construction</string>
    <string name="toc">Theory of Computation</string>
    <string name="simulation">Simulation and Modelling</string>
    <string name="multimedia">Multimedia Systems</string>
    <string name="research">Research Methodology</string>
    <string name="DAA">Design and Analysis of Algorithms</string>
    <string name="SWE">Software Engineering</string>
    <string name="AI">Artificial Intelligence</string>
    <string name="IAP">Internet Application Programming</string>
    <string name="map_save_toggle_switch_description">Mobile application programming toggle switch</string>
    <string name="SWE_save_toggle_switch_description">Software Engineering toggle switch</string>
    <string name="IAP_save_toggle_switch_description">Internet Application Programming toggle switch</string>
    <string name="toc_save_toggle_switch_description">Theory of Computation toggle switch</string>
    <string name="multimedia_save_toggle_switch_description">Multimedia Systems toggle switch</string>
    <string name="DAA_save_toggle_switch_description">Design and Analysis of Algorithms toggle switch</string>
    <string name="AI_save_toggle_switch_description">Artificial Intelligence toggle switch</string>
    <string name="simulation_save_toggle_switch_description">Simulation and Modelling toggle switch</string>
    <string name="research_save_toggle_switch_description">Research Methodology toggle switch</string>
    <string name="compiler_save_toggle_switch_description">Compiler Construction toggle switch</string>
    <string name="cancel">Cancel</string>
    <string name="dummy_lec_name">Mr David Opondo</string>
    <string name="dummy_dept">Computer Science Dpt</string>
    <string name="dummy_lec_email">opondo.david@dkut.ac.ke</string>
    <string name="lec_unit">Unit:</string>
    <string name="dummy_lec_unit">CCS 3211: Mobile Application Programming</string>
    <string name="enter_cat_1_marks">Enter CAT 1 Marks</string>
    <string name="enter_cat_2_marks">Enter CAT 2 Marks</string>
    <string name="enter_exam_marks">Enter Exam Marks</string>
    <string name="generate__std_report">Generate student report</string>
    <string name="enter_assign_1_marks">Enter Assignment 1 Marks</string>
    <string name="enter_assign_2_marks">Enter Assignment 2 Marks</string>
    <string name="activity">Activities</string>
    <string name="get_report">Get Report</string>
    <string name="enter_marks">Enter Marks</string>
    <string name="marks_inputs">Marks Input cards</string>
    <string name="name_">Name:</string>
    <string name="reg_num">Reg no.:</string>
    <string name="enter_student_marks_here">Enter student marks here</string>
    <string name="admit_new_lecturer">Admit new lecturer</string>
    <string name="enter_marks_cat_1">Enter CAT 1 marks</string>
    <string name="enter_assignment_2_marks">Enter assignment 2 marks</string>
    <string name="control_panel">Control Panel</string>
    <string name="log_out">Log out</string>
    <string name="staff_id">Enter staff ID</string>
    <string name="stuff_id">Stuff ID Number</string>
    <string name="stuff_email">Stuff Email</string>
    <string name="department">Department</string>
    <string name="edit_cat_1">Edit CAT 1 Marks</string>
    <string name="edit_assgn_1">Edit Assignment 1 Marks</string>
    <string name="edit_assgn_2">Edit Assignment 2 Marks</string>
    <string name="edit_cat_2">Edit CAT 2 Marks</string>
    <string name="exam_edit_button">Edit Exam Marks</string>
    <string name="register_new_lecturer">Register New Lecturer</string>
    <string-array name="departments">
        <item>Computer Science dpt</item>
        <item>Statistics dpt</item>
        <item>Mathematics dpt</item>
    </string-array>
</resources>