<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="5dp"
    android:layout_gravity="center"
    tools:context=".RegisterLecturer">

    <ImageButton
        android:id="@+id/stdRegArrowButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="?android:attr/selectableItemBackground"
        android:src="@drawable/arrow24px"
        android:contentDescription="@string/back_arrow" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_new_lecturer"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="@color/light_blue"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/light_blue"
        android:layout_marginTop="5dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"/>
    <EditText
        android:id="@+id/lec_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/input_border"
        android:hint="@string/enter_name"
        android:inputType="textEmailSubject"
        android:layout_marginTop="2dp"
        android:paddingStart="10dp"
        android:autofillHints="username"
        tools:ignore="RtlSymmetry" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stuff_id"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/lec_stuff_id_edit_text"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="2dp"
        android:autofillHints="C026-00-1234/2006"
        android:background="@drawable/input_border"
        android:hint="@string/staff_id"
        android:inputType="text"
        android:paddingStart="10dp"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stuff_email"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"/>
    <EditText
        android:id="@+id/email_edit_text"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/input_border"
        android:hint="@string/enter_email_address"
        android:inputType="textEmailSubject"
        android:layout_marginTop="2dp"
        android:paddingStart="10dp"
        android:autofillHints="emailAddress"
        tools:ignore="RtlSymmetry" />
   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/department"
       android:layout_marginTop="10dp"
       android:textStyle="normal"
       android:textSize="16sp"
       android:textColor="@color/black"/>
    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:entries="@array/departments"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#494949"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"/>
    <Spinner
        android:id="@+id/unit_spinner"
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:entries="@array/courses"
        android:layout_height="50dp"/>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:indeterminateDrawable="@drawable/blue_progress_bar"
        android:visibility="gone"
        />
    <Button
        android:id="@+id/reg_button"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/blue_background_button"
        android:text="@string/registerNoLine"
        android:textColor="@color/white"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:text="@string/have_account"
            />
        <TextView
            android:id="@+id/login_text_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="16sp"
            android:textColor="#575DFB"
            android:textStyle="bold"
            android:text="@string/login"
            android:layout_marginStart="5dp"
            />
    </LinearLayout>
</LinearLayout>