<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="5dp"
    android:layout_gravity="center"
    tools:context=".StudentRegistration">

    <ImageButton
        android:id="@+id/stdRegArrowButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="?android:attr/selectableItemBackground"
        android:src="@drawable/arrow24px"
        android:contentDescription="@string/back_arrow" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registerNoLine"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="@color/light_blue"
        />
    <TextView
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:text="@string/registerMsg"
        android:textSize="16sp"
        android:paddingTop="5dp"
        android:textColor="@color/black"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"/>
    <EditText
        android:id="@+id/student_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/input_border"
        android:hint="@string/enter_name"
        android:inputType="textEmailSubject"
        android:layout_marginTop="2dp"
        android:paddingStart="10dp"
        android:autofillHints="username"
        tools:ignore="RtlSymmetry" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reg_number"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"/>
    <EditText
        android:id="@+id/reg_number_edit_text"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/input_border"
        android:hint="@string/enter_Reg"
        android:inputType="text"
        android:layout_marginTop="2dp"
        android:paddingStart="10dp"
        android:autofillHints="C026-01-1234/2020"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/student_email"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"/>
    <EditText
        android:id="@+id/email_edit_text"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/input_border"
        android:hint="@string/enter_email_address"
        android:inputType="textEmailSubject"
        android:layout_marginTop="2dp"
        android:paddingStart="10dp"
        android:autofillHints="emailAddress"
        tools:ignore="RtlSymmetry" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_password"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:textColor="@color/black"/>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        app:passwordToggleEnabled="true"
        tools:ignore="RtlSymmetry">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="2dp"
            android:autofillHints="password"
            android:background="@drawable/input_border"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:paddingStart="5dp"
            tools:ignore="DuplicateSpeakableTextCheck" />

    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_password"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:textColor="@color/black"/>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        app:passwordToggleEnabled="true"
        tools:ignore="RtlSymmetry">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirm_password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:hint="@string/enter_password"
            android:layout_marginTop="2dp"
            android:paddingStart="5dp"
            android:background="@drawable/input_border"
            android:inputType="textPassword"
            android:autofillHints="password"/>

    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:indeterminateDrawable="@drawable/blue_progress_bar"
        android:visibility="gone"
        />
    <Button
        android:id="@+id/reg_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/blue_background_button"
        android:text="@string/registerNoLine"
        android:textFontWeight="700"
        android:textColor="@color/white"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:text="@string/have_account"
            />
        <TextView
            android:id="@+id/login_text_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="16sp"
            android:textColor="#575DFB"
            android:textStyle="bold"
            android:text="@string/login"
            android:layout_marginStart="5dp"
            />
    </LinearLayout>
</LinearLayout>