<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="35dp"
    android:orientation="vertical"
    tools:context=".Login">

    <ImageButton
        android:id="@+id/arrowButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="?android:attr/selectableItemBackground"
        android:src="@drawable/arrow24px"
        android:contentDescription="@string/back_arrow" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginNoLine"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="#575DFB"
        android:layout_marginTop="21dp"/>
    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/loginMsg"
        android:textSize="16sp"
        android:paddingTop="19dp"
        android:textColor="@color/black"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="16sp"
        android:layout_marginTop="40dp"
        android:textColor="@color/black"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/button_bg"/>

</LinearLayout>