<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_margin="5dp"
    tools:context=".AdminLandingPage">

    <TextView
        android:id="@+id/header_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="48dp"
        android:text="@string/control_panel"
        android:textColor="@color/light_blue"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginTop="16dp"
        android:background="@color/light_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_title" />

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/log_out_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/assgn_1_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/dark_card_background"
            android:text="@string/edit_assgn_1"
            android:textColor="@color/white"
            android:textStyle="bold" />
        <Button
            android:id="@+id/assgn_2_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/dark_card_background"
            android:text="@string/edit_assgn_2"
            android:textColor="@color/white"
            android:textStyle="bold" />
        <Button
            android:id="@+id/cat_1_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/dark_card_background"
            android:text="@string/edit_cat_1"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/cat_2_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/dark_card_background"
            android:text="@string/edit_cat_2"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/exam_edit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/dark_card_background"
            android:text="@string/exam_edit_button"
            android:textColor="@color/white"
            android:textStyle="bold" />
        <Button
            android:id="@+id/admit_lec_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/blue_background_button"
            android:text="@string/admit_new_lecturer"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/generate_student_report"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/blue_background_button"
            android:text="@string/generate_report"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/print_summary_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/blue_background_button"
            android:text="@string/summary"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/log_out_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:background="@drawable/red_bg_button"
        android:text="@string/log_out"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>